# game_full_stack

./: .gitignore  LICENSE  README.md  build.sh  deploy.sh  public.h
depend_docker/: Dockerfile
game_api/: CMakeLists.txt  api_test.cpp  game_api.cpp  game_api.h  game_msg.pb.cc  game_msg.pb.h  game_msg.proto
game_front/game_vue/: README.md  package-lock.json  package.json
game_front/game_vue/public/: index.html
game_front/game_vue/src/: App.vue  game_msg.proto  game_msg_pb.js  main.js
game_front/game_vue/src/assets/: self-defined-style.css
game_front/game_vue/src/components/: EachPlayer.vue  SingleCard.vue
game_front/game_vue/src/router/: index.js
game_front/game_vue/src/views/: Home.vue  QQlogin.vue  Table.vue  WechatLogin.vue
game_rest/: CMakeLists.txt
game_rest/.ngrest/: services
game_rest/game_rest/: CMakeLists.txt
game_rest/game_rest/src/: game_rest.cpp  game_rest.h
game_server/: CMakeLists.txt  game_database.cpp  game_database.h  game_entry.cpp  game_entry.h  game_logic.cpp  game_logic.h  game_mng.cpp  game_mng.h  game_table.cpp  game_table.h  main.cpp
nginx_conf/: nginx.conf
tcp_framework/: CMakeLists.txt  tdf_include.h  tdf_main.cpp
